# lambda

./: CMakeLists.txt
binary/: arithmetic.lc  booleans.lc  infinitely_expanding_binary_numbers.lc  numbers.lc  pairs.lc  program.lc  stack.lc
examples/: binary.lc  binary8.lc  numbers.lc  play.lc  test2.lc
examples/bin2dec/: arithmetic.lc  booleans.lc  conditionals.lc  decimal.lc  division.lc  list.lc  list2.lc  numbers.lc  pair.lc  recursion.lc
examples/bin2dec/extra/: binary8.lc  fibonacci.lc
src/: main.cpp
src/lambda/interpret/: Interpreter.cpp  Interpreter.h
src/lambda/interpret/exception/: InterpretException.h
src/lambda/parse/: DefinitionStack.cpp  DefinitionStack.h  Parser.cpp  Parser.h
src/lambda/parse/exception/: EOFException.h  ParseException.h  SyntaxException.h  UnexpectedTokenException.h
src/lambda/parse/logic/: ExpressionParser.cpp  ExpressionParser.h  StatementParser.cpp  StatementParser.h
src/lambda/syntax/expressions/: Abstraction.h  Application.h  Expression.h  Lambda.h  Variable.cpp  Variable.h
src/lambda/syntax/statements/: Assignment.h  Play.cpp  Play.h  Print.h  Statement.h
src/lambda/token/: Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h
src/util/: Stopwatch.h
